Added link to some new created html files (login.html, register.html, admin.html)

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <nav class="main-nav">
         <ul class="main-nav-list">
           <li>
-            <a class="main-nav-link primary-color link-home" href="#"
+            <a class="main-nav-link primary-color link-home" href="./index.html"
               ><ion-icon name="laptop-outline" class="logo-icon"></ion-icon
               >Naija Votes</a
             >
@@ -53,7 +53,9 @@
           </ul>
           <ul class="main-nav-list">
             <li>
-              <a class="main-nav-link color-text link-login" href="#">Login</a>
+              <a class="main-nav-link color-text link-login" href="./login.html"
+                >Login</a
+              >
             </li>
             <li>
               <a class="main-nav-link color-text link-register" href="#"
@@ -79,49 +81,87 @@
           </div>
         </section>
 
-        <section class="candidates">
+        <section class="candidates margin-bottom-5">
           <header>
-            <h2>Candidates</h2>
+            <h2 class="secondary-heading margin-bottom-2">Candidates</h2>
           </header>
 
-          <div class="candidates-box grid grid-cols-2">
+          <div class="candidates-box grid grid-cols-2 margin-bottom-3">
             <div class="candidate">
-              <img src="#" alt="candidate 1" />
-              <div>
-                <p>Khaled Jibril</p>
+              <img
+                src="./img/Blue eyes [Original] (5600x3600).png"
+                class="candidate-img"
+                alt="candidate-1"
+              />
+              <div class="candidate-info">
+                <p class="candidate-name color-dark">Khaled Jibril</p>
                 <p>Unity & Progress Party (UPP)</p>
               </div>
+              <img
+                src="./img/963f0b7.jpg"
+                alt="Party Logo"
+                class="party-logo"
+              />
             </div>
             <div class="candidate">
-              <img src="#" alt="candidate 2" />
-              <div>
-                <p>Aisha Bello</p>
+              <img
+                src="./img/Blue eyes [Original] (5600x3600).png"
+                class="candidate-img"
+                alt="candidate-2"
+              />
+              <div class="candidate-info">
+                <p class="candidate-name color-dark">Aisha Bello</p>
                 <p>New Nigeria Alliance (NNA)</p>
               </div>
+              <img
+                src="./img/963f0b7.jpg"
+                alt="Party Logo"
+                class="party-logo"
+              />
             </div>
             <div class="candidate">
-              <img src="#" alt="candidate 3" />
-              <div>
-                <p>Chinedu Okeke</p>
+              <img
+                src="./img/Blue eyes [Original] (5600x3600).png"
+                class="candidate-img"
+                alt="candidate-3"
+              />
+              <div class="candidate-info">
+                <p class="candidate-name color-dark">Chinedu Okeke</p>
                 <p>People Democratic Coalition (PDC)</p>
               </div>
+              <img
+                src="./img/963f0b7.jpg"
+                alt="Party Logo"
+                class="party-logo"
+              />
             </div>
             <div class="candidate">
-              <img src="#" alt="candidate 4" />
-              <div>
-                <p>Fatima Abubakar</p>
+              <img
+                src="./img/Blue eyes [Original] (5600x3600).png"
+                class="candidate-img"
+                alt="candidate-4"
+              />
+              <div class="candidate-info">
+                <p class="candidate-name color-dark">Fatima Abubakar</p>
                 <p>Social Justice Movement (SJM)</p>
               </div>
+              <img
+                src="./img/963f0b7.jpg"
+                alt="Party Logo"
+                class="party-logo"
+              />
             </div>
           </div>
-          <button type="button" class="btn">Cast My Vote</button>
+          <button type="button" class="btn btn-primary btn-cast-vote">
+            Cast My Vote
+          </button>
         </section>
       </div>
     </main>
 
-    <footer>
+    <footer class="main-footer">
       <p>&copy; 2023 Naija Votes. All rights reserved.</p>
-      <p><a href="#">Report an Issue / Feedback</a></p>
+      <p><a href="#" class="link report-link">Report an Issue / Feedback</a></p>
     </footer>
   </body>
 </html>
