Added more hyperlinks

--- a/index.html
+++ b/index.html
@@ -58,12 +58,16 @@
               >
             </li>
             <li>
-              <a class="main-nav-link color-text link-register" href="#"
+              <a
+                class="main-nav-link color-text link-register"
+                href="./register.html"
                 >Register</a
               >
             </li>
             <li>
-              <a class="main-nav-link color-text link-admin" href="#">Admin</a>
+              <a class="main-nav-link color-text link-admin" href="./admin.html"
+                >Admin</a
+              >
             </li>
           </ul>
         </div>
