I added margin-bottom-5 to the login-in-container

--- a/register.html
+++ b/register.html
@@ -74,7 +74,7 @@
       </nav>
     </header>
     <main>
-      <div class="container log-in-container">
+      <div class="container log-in-container margin-bottom-5">
         <section class="login-box">
           <header class="login-header margin-bottom-2">
             <p><ion-icon name="person-add" class="login-icon"></ion-icon></p>
